--- a/kie-wb-common-screens/kie-wb-common-default-editor/kie-wb-common-default-editor-api/pom.xml
+++ b/kie-wb-common-screens/kie-wb-common-default-editor/kie-wb-common-default-editor-api/pom.xml
@@ -40,6 +40,11 @@
       <artifactId>uberfire-api</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.uberfire</groupId>
+      <artifactId>uberfire-commons-editor-api</artifactId>
+    </dependency>
+
   </dependencies>
 
 </project>
