--- a/kie-wb-common-screens/kie-wb-common-default-editor/kie-wb-common-default-editor-backend/pom.xml
+++ b/kie-wb-common-screens/kie-wb-common-default-editor/kie-wb-common-default-editor-backend/pom.xml
@@ -56,6 +56,15 @@
       <artifactId>kie-wb-common-services-backend</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.uberfire</groupId>
+      <artifactId>uberfire-commons-editor-api</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.uberfire</groupId>
+      <artifactId>uberfire-commons-editor-backend</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
