--- a/kie-wb-common-screens/kie-wb-common-project-editor/kie-wb-common-project-editor-api/pom.xml
+++ b/kie-wb-common-screens/kie-wb-common-project-editor/kie-wb-common-project-editor-api/pom.xml
@@ -77,6 +77,11 @@
       <artifactId>uberfire-api</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.uberfire</groupId>
+      <artifactId>uberfire-commons-editor-api</artifactId>
+    </dependency>
+
   </dependencies>
 
 </project>
