* DROOLS-2759: [DMN Editor] Custom data-types - Create the treegrid-table component
 * DROOLS-2760: [DMN Editor] Custom data-types - Populate the treegrid-table with a real ItemDefinition

 * DROOLS-2702: [DMN Editor] Custom data-types - Bind the UI component with the ItemDefinition

 * DROOLS-2761: [DMN Editor] Custom data-types - "Field Type" column - Populate Field Type comboboxes

 * DROOLS-2717: [DMN Editor] Custom data-types - Unit tests

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/pom.xml
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/pom.xml
@@ -184,6 +184,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.uberfire</groupId>
+      <artifactId>uberfire-commons-editor-client</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
       <groupId>org.jboss.errai</groupId>
       <artifactId>errai-bus</artifactId>
     </dependency>
